--- a/project.json
+++ b/project.json
@@ -2,13 +2,9 @@
   "services": [
     {
       "id": "01",
-
       "name": "Car Store - Online Vehicle Marketplace 🚗",
-
       "imageUrl": "https://i.postimg.cc/2yFHwstk/screencapture-car-store-frontend-delta-vercel-app-2025-02-22-01-31-10.png",
-
       "description": "Car Store is a responsive platform for browsing, purchasing, and managing vehicle orders. It offers secure payments, order tracking, customer reviews, and an admin dashboard with sales and profit analytics.",
-
       "features": [
         "Browse and filter cars by brand, price, and model",
         "Secure payment integration with ShurjoPay",
@@ -66,6 +62,14 @@
         "Tailwind CSS"
       ],
       "liveLink": "https://career-cove.netlify.app"
+    }
+  ],
+  "contacts": [
+    {
+      "id": "99c7",
+      "name": "Arfan Ahme",
+      "email": "arfan@example.com",
+      "message": "tryutru"
     }
   ]
 }
