--- a/project.json
+++ b/project.json
@@ -71,5 +71,58 @@
       "email": "arfan@example.com",
       "message": "tryutru"
     }
+  ],
+  "blogs": [
+    {
+      "id": 1,
+      "title": "Building Scalable Web Applications with the MERN Stack",
+      "author": "Arfan Ahmed",
+      "date": "2024-12-15",
+      "category": "Web Development",
+      "content": "Building scalable web applications requires choosing the right technology stack. The MERN stack, comprising MongoDB, Express.js, React, and Node.js, is a popular choice for full-stack development. MongoDB’s flexibility with NoSQL databases allows for rapid data modeling, while Express.js provides a robust framework for handling server-side operations. React handles the frontend with a component-based architecture, ensuring reusable and efficient UI components. Node.js powers the backend with an event-driven model, making the application scalable and fast. When developing with MERN, it's crucial to manage state effectively, handle authentication securely, and use best practices like code splitting and lazy loading for optimal performance. Deploying MERN apps using services like Vercel for the frontend and platforms like Heroku or AWS for the backend ensures seamless user experiences. Throughout the development process, tools like Postman for API testing and MongoDB Atlas for database management streamline workflows. By leveraging the strengths of each component, developers can create responsive, scalable, and maintainable applications that cater to modern user needs.",
+      "image": "https://vinncorp.com/wp-content/uploads/2023/11/banner-jpg.webp",
+      "tags": ["MERN Stack", "Full-Stack", "Web Apps"]
+    },
+    {
+      "id": 2,
+      "title": "Integrating ShurjoPay into Your Web Applications",
+      "author": "Arfan Ahmed",
+      "date": "2025-02-11",
+      "category": "Payment Systems",
+      "content": "Integrating a secure and reliable payment gateway is vital for modern web applications. ShurjoPay offers a robust solution tailored for businesses in Bangladesh. The integration process begins by registering for ShurjoPay credentials, which include a merchant ID and secret key. Using these, you can set up secure server-side communication with ShurjoPay’s API. In an Express.js backend, handle payment requests and verify responses to ensure transaction integrity. On the frontend, React components can display payment options and track statuses in real-time. MongoDB integration allows transaction data to be stored efficiently for future references. Implementing proper error handling is crucial to manage failed transactions and user cancellations. For enhanced security, always use HTTPS and sanitize user inputs to prevent vulnerabilities. Testing in a sandbox environment ensures that your application handles all scenarios before going live. By following best practices, you can deliver a seamless and secure payment experience to your users, improving trust and conversion rates.",
+      "image": "https://i.postimg.cc/fywLhfqz/Reasonsto-Counton-Us-1.png",
+      "tags": ["ShurjoPay", "Integration", "Fintech"]
+    },
+    {
+      "id": 3,
+      "title": "Dark Mode Implementation with Tailwind CSS and ShadCN",
+      "author": "Arfan Ahmed",
+      "date": "2025-02-20",
+      "category": "UI/UX Design",
+      "content": "Dark mode has become an essential feature for modern web applications, providing users with a more comfortable viewing experience in low-light environments. Implementing dark mode with Tailwind CSS is straightforward using the `dark` class. Begin by enabling dark mode in your Tailwind configuration, typically using the 'class' strategy for better control. Components styled with ShadCN integrate seamlessly, offering pre-built UI elements that respect the dark theme. Toggle functionality can be implemented with React’s state management, allowing users to switch between modes effortlessly. Storing the theme preference in local storage ensures that users’ choices persist across sessions. From a design perspective, consider contrast ratios to maintain readability and ensure that interactive elements remain visible in both modes. Testing across different devices and browsers guarantees a consistent experience. By implementing dark mode thoughtfully, you not only enhance accessibility but also cater to user preferences, increasing engagement and satisfaction with your web application.",
+      "image": "https://i.postimg.cc/KcrksRpc/maxresdefault.jpg",
+      "tags": ["Tailwind CSS", "ShadCN", "Dark Mode"]
+    },
+    {
+      "id": 4,
+      "title": "Optimizing MongoDB Queries for Better Performance",
+      "author": "Arfan Ahmed",
+      "date": "2025-01-05",
+      "category": "Database Management",
+      "content": "Efficient MongoDB queries are crucial for maintaining application performance, especially as datasets grow. The first step in optimization is understanding how MongoDB’s aggregation pipeline works. Using stages like `$match` and `$project` early in the pipeline can reduce data processing overhead. Indexing is another key technique—creating indexes on frequently queried fields can dramatically speed up read operations. Utilize tools like `explain()` to analyze query performance and identify bottlenecks. Avoid using `$regex` or unindexed `$or` conditions on large collections as they can be resource-intensive. Pagination using `$skip` and `$limit` should be handled carefully, as excessive skipping can lead to inefficiencies; instead, consider using range-based queries or the `$facet` stage. Keeping your schema design consistent with the access patterns and reducing document size by embedding or referencing appropriately helps optimize storage. Regularly updating and monitoring your database ensures continued performance improvements. With these practices, you can handle large-scale data efficiently while ensuring faster response times.",
+      "image": "https://embarkingonvoyage.com/wp-content/uploads/2024/10/web-Product-success-60-980x551.webp",
+      "tags": ["MongoDB", "Optimization", "Backend"]
+    },
+    {
+      "id": 5,
+      "title": "My Journey of Developing a Car Store Platform with ShurjoPay Integration",
+      "author": "Arfan Ahmed",
+      "date": "2025-02-14",
+      "category": "Project Experience",
+      "content": "Developing the Car Store platform was an enriching experience that involved designing a user-friendly e-commerce application with a focus on functionality and scalability. The project featured both admin and user dashboards. The admin dashboard included visual analytics such as monthly profit graphs and car sales by brand, while the user dashboard offered features like order history, reviews, and payment options. Integrating ShurjoPay was a crucial aspect, enabling secure transactions directly from the platform. Implementing pagination for product listings ensured smooth navigation, especially as the database grew. Using the MERN stack allowed seamless integration between the frontend and backend. MongoDB’s aggregation pipeline proved invaluable in fetching data for the dashboard analytics, and Tailwind CSS with ShadCN ensured a clean, responsive UI with dark mode support. One of the biggest challenges was handling real-time payment status updates, which was addressed through proper API handling and webhook integration. This project not only enhanced my technical skills but also deepened my understanding of building production-ready applications.",
+      "image": "https://i.postimg.cc/2yFHwstk/screencapture-car-store-frontend-delta-vercel-app-2025-02-22-01-31-10.png",
+      "tags": ["Project", "E-commerce", "Dashboard"]
+    }
   ]
+  
 }
