add: update and delete blog

--- a/project.json
+++ b/project.json
@@ -119,11 +119,11 @@
       "image": "https://i.postimg.cc/2yFHwstk/screencapture-car-store-frontend-delta-vercel-app-2025-02-22-01-31-10.png"
     },
     {
-      "id": "5eb3",
-      "title": "khhjk",
-      "category": "khjkh",
+      "id": "6108",
+      "title": "abcdefgh",
+      "category": "sdftds",
       "image": "https://plus.unsplash.com/premium_photo-1664474619075-644dd191935f?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D",
-      "content": "asdryrty"
+      "content": "gerterwt"
     }
   ]
 }
